Fri Aug 14 09:58:37 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update version numbers of
	  branchpoints.

Wed Aug 05 05:50:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Mention where to get colormath from.

Wed Aug 05 05:40:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour_data.py: Fix not to use defaultdict.

Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix to work with FieldGroups again.

Wed Aug 05 01:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Uncomment needed imports (which I'm not
	  currently sure how to satisfy).

Wed Aug 05 01:28:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Various updates and fixes.

Wed Aug 05 00:18:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,docs/image.rst,xappy/colour.py,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/colour.py: Merge in
	  changes from colour branch.

Tue Aug 04 21:39:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update revision numbers, and add
	  coloursim branch.

Tue Jul 28 17:16:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: remove postingsources branch - now
	  merged to trunk.

Sun Jul 19 15:46:43 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Remove replaylog functionality - it never fully worked,
	  and it's better to either use python's trace functions, or a
	  debug logging build of xapian.

Sun Jul 19 15:37:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,utils/make_xappy_tarballs,
	  xappy/_checkxapian.py,xappy/doctests/searchconnection_doctest2.txt,
	  xappy/doctests/searchconnection_doctest3.txt,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/: Remove TAG feature -