@@ -38,7 +38,7 @@ if versions < min_xapian_version:
         Xapian Python bindings installed, but need at least version %d.%d.%d - got %s
         """.strip() % tuple(list(min_xapian_version) + [xapian.version_string()]))
 
-if not hasattr(xapian, 'CategorySelectMatchSpy'):
+if not hasattr(xapian, 'ValueCountMatchSpy'):
     missing_features['facets'] = 1
 if not hasattr(xapian, 'ValueWeightPostingSource'):
     missing_features['valueweight'] = 1
