@@ -195,7 +195,7 @@ class TestPercent(TestCase):
 
         results = sconn.search(q, 0, 5, sortby="date")
         self.assertEqual(self._summarise_results(results),
-                         [('7', 58, 326), ('8', 29, 163)])
+                         [('7', 62, 326), ('8', 31, 163)])
 
         try:
             results = sconn.search(q, 0, 5, sortby="date", percentcutoff=30)
@@ -204,11 +204,11 @@ class TestPercent(TestCase):
             had_exc = True
         if not had_exc:
             self.assertEqual(self._summarise_results(results),
-                             [('7', 58, 326)])
+                             [('7', 62, 326)])
 
         results = sconn.search(q, 0, 5, sortby="date", weightcutoff=20)
         self.assertEqual(self._summarise_results(results),
-                         [('7', 58, 326)])
+                         [('7', 62, 326)])
 
         try:
             results = sconn.search(q, 0, 5, sortby="date", percentcutoff=56)
